--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.5.2"
+		"@sveltejs/adapter-vercel": "^5.5.2",
+		"svelte-preprocess": "^6.0.3"
 	}
 }
