--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-vercel": "^5.5.2",
+		"autoprefixer": "^10.4.20",
 		"svelte-preprocess": "^6.0.3"
 	}
 }
